# nixos-drift-detector

./: .gitignore  README.md  flake.nix  pyproject.toml
drift_detector/: __init__.py  cli.py  config.py  differ.py  models.py  report.py
drift_detector/collectors/: __init__.py  systemd.py
drift_detector/evaluator/: __init__.py  profile.py  systemd.py
integration_tests/: test_services_drift.sh
nix/: test.py
