[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixos-drift-detector"
version = "0.1.0"
description = "Detect drift between your NixOS declared configuration and live runtime state"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nixos-drift-detect = "drift_detector.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drift_detector*"]
